# Follow-Me-Roboter

./: README.md  README.me  installation guide (english) update edited.adoc  installation guide (english) update unedited.adoc  installation guide (english).adoc  installation_troubleshooting.adoc  user guide (english).adoc
Abgabe_Beleg_SE_II/: Abnahmeprotokoll.adoc  Abnahmeprotokoll_Neugebauer.adoc  Aktualisierte_Anforderungsspezifikation.adoc  Anwenderdokumentation.adoc  Betriebsdokumentation.adoc  Entwicklerdokumentation.adoc  Testdokumentation.adoc
Abgabe_Beleg_SE_II/pdf/: Thumbs.db
Abgabe_se2/: Anwenderdokumentation.adoc  Entwicklerdokumentation.adoc
Documentation/: README.md  se1_belegabgabe_t00.adoc
Documentation/_includes/: default-attributes.inc.adoc  teammitglieder.adoc
Documentation/architecture/: Konzept v1.drawio  Softweardokumentation.adoc  Softweardolumentation.adoc  a.adoc  architecture_notebook.adoc  architecture_notebook_rework.adoc
Documentation/developer diary/: 1. Iteration.adoc  2. Iteration.adoc  Iteration 1.adoc  Iteration 2.adoc  README.md  README.me
Documentation/developer_diary/: Iteration_1.adoc  Iteration_2.adoc  Iteration_3.adoc  Iteration_4.adoc  Iteration_5.adoc  Iteration_6.adoc
Documentation/development/: design.adoc  design_Simulation.adoc  design_formula.adoc  design_history.adoc  design_history_update.adoc
Documentation/project_management/: iteration_plan_01.adoc  iteration_plan_02.adoc  project_plan.adoc  risk_list.adoc  risks.csv
Documentation/requirements/: domain_model.adoc  glossary.adoc  system-wide_requirements.adoc  use-case_model.adoc  use_case_01.inc.adoc  use_case_01.inc_old.adoc  use_case_02.inc.adoc  use_case_03.inc.adoc  use_case_04.inc.adoc  use_case_05.inc.adoc  vision.adoc
Documentation/test/: Test_Bewegungskalkulation.adoc  Test_Humandetection.adoc  Test_case_01.adoc  Unit-Test_Bewegungskontroll-Node.adoc  Verlaufsdokumentation_Humandetection.adoc  Verlaufsdokumentation_zu_Bewegungskalkulation copy.adoc  Verlaufsdokumentation_zu_Bewegungskalkulation.adoc  humandetection_tests  humandetection_tests.adoc  (+2 more)
Legacy/: se1_belegabgabe_t00.adoc
VSCODE_TEST/: importcv2.py
belegabgabe_se1/: se1_belegabgabe_t00.adoc
src/ros2_ws/src/camera_package/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/camera_package/camera_package/: camera_opencv_node.py  camera_streamer_node.py  camera_subscriber_node.py  camera_subscriber_test.py  image_streamer_node.py  movement_control_node.py  movemt_control_node.py
src/ros2_ws/src/camera_package/camera_package/templates/: index.html
src/ros2_ws/src/camera_package/launch/: camera_opencv_launch.py  follow_me_launch.py  test_launch.py
src/ros2_ws/src/camera_package/opencv/: human_detector.py
src/ros2_ws/src/ros2_for_waveshare_alphabot2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros2_ws/src/ros2_for_waveshare_alphabot2/launch/: Alphabot2_standard_launch.py  Alphabot2_test_launch.py  test_launch.py
src/ros2_ws/src/ros2_for_waveshare_alphabot2/msg/: LineFollowStamped.msg  ObstacleStamped.msg  PanTiltStamped.msg
src/ros2_ws/src/ros2_for_waveshare_alphabot2/ros2_for_waveshare_alphabot2/: ir_control.py  joystick.py  motion.py  pan_tilt.py  rgb_leds.py  sensors.py  sound.py  test.py  test2.py
src/ros2_ws/src/ros2_for_waveshare_alphabot2/services/: setup.sh
src/ros2_ws/src/ros2_for_waveshare_alphabot2/services/setup/: create_workspace.sh  full_reinstall_alphabot.sh  full_reinstall_camera.sh  install_ros2_humble.sh  reinstall_alphabot.sh  reinstall_camera.sh
src/ros2_ws/src/ros2_for_waveshare_alphabot2/services/wsRGB/: wsrgb.service
src/ros2_ws/src/ros2_for_waveshare_alphabot2/urdf/: Ros2_for_Waveshare_Alphabot2.urdf
(+68 files in other folders)
