<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_for_waveshare_alphabot2</name>
  <version>0.0.0</version>
  <description>Ros2 node for for the Waveshare Alphabot 2</description>
  <maintainer email="ubuntu@todo.todo">Claire Schubert</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>RPi.GPIO</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>smbus</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <build_depend>rosidl_default_generators</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
